# delete_simplelogin_contacts

./: .gitignore  README.md  delete_simplelogin_contacts.py  pyproject.toml
